fixed overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ html {
 
 
 .about-container {
-    height: 100vh;
+    height: 120vh;
     padding-top: 132px;
     max-width: 100vw;
     overflow-x: hidden;
@@ -148,8 +148,8 @@ html {
 
 footer {
     height: 80px;
-    margin-top: 25px;
-    margin-bottom: 75px;
+    margin-top: -105px;
+    padding-bottom: 155px;
 }
 
 footer p {
